--- a/Throw_fornt/app/src/main/res/layout/list_view_item.xml
+++ b/Throw_fornt/app/src/main/res/layout/list_view_item.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/store_name"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:text="가게이름"
         android:layout_marginTop="10dp"
