feat: 반경 범위 조절 기능 추가

--- a/Throw_fornt/app/src/main/res/layout/activity_home.xml
+++ b/Throw_fornt/app/src/main/res/layout/activity_home.xml
@@ -31,6 +31,9 @@
             android:layout_height="70dp"
             app:itemActiveIndicatorStyle="@color/transparent"
             app:itemBackground="@color/transparent"
+            app:backgroundTint="@color/white"
+            app:itemIconTint="@color/bg_bottom_navigation_color"
+            app:itemTextColor="@color/bg_bottom_navigation_color"
             app:labelVisibilityMode="selected"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
