--- a/Throw_fornt/app/src/main/res/layout/fragment_map.xml
+++ b/Throw_fornt/app/src/main/res/layout/fragment_map.xml
@@ -16,6 +16,56 @@
         android:layout_height="match_parent"
         tools:context=".feature.map.MapFragment">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/tb_map"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|start"
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Throw"
+                    android:textColor="@color/black"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_throw_help_15_22" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="24dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_throw_qr_22" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_throw_bell_22_25" />
+
+            </LinearLayout>
+        </androidx.appcompat.widget.Toolbar>
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_begin"
             android:layout_width="wrap_content"
@@ -33,7 +83,9 @@
         <net.daum.mf.map.api.MapView
             android:id="@+id/map_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tb_map" />
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/sb_store_search_bar"
@@ -45,7 +97,7 @@
             app:iconifiedByDefault="false"
             app:layout_constraintEnd_toEndOf="@id/gl_end"
             app:layout_constraintStart_toStartOf="@id/gl_begin"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tb_map"
             app:queryBackground="@null"
             app:queryHint="가게이름을 입력하세요" />
 
@@ -69,8 +121,8 @@
             android:adjustViewBounds="true"
             android:background="@drawable/bg_white_and_black_radius"
             android:onClick="@{() -> viewModel.moveCameraToCurPosition()}"
-            android:scaleType="centerCrop"
             android:padding="4dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/ic_my_location_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/gl_begin" />
@@ -83,11 +135,59 @@
             android:adjustViewBounds="true"
             android:background="@drawable/bg_white_and_black_radius"
             android:onClick="@{() -> viewModel.refreshNearbyStores()}"
-            android:scaleType="centerCrop"
             android:padding="4dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/ic_refresh_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/gl_end" />
+
+        <RadioGroup
+            android:id="@+id/rg_store_search_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/bg_alpha_26_black_and_no_radius"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@id/btn_refresh_nearby_stores"
+            app:layout_constraintEnd_toEndOf="@id/gl_end">
+
+            <RadioButton
+                android:id="@+id/radio_button_spring"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:checked="@{viewModel.selectedSearchDistance.equals(3)}"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                android:onClick="@{()->viewModel.onChangeSearchDistance(3)}"
+                android:paddingHorizontal="2dp"
+                android:text="3km" />
+
+            <RadioButton
+                android:id="@+id/radio_button_summer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:checked="@{viewModel.selectedSearchDistance.equals(4)}"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                android:onClick="@{()->viewModel.onChangeSearchDistance(4)}"
+                android:paddingHorizontal="2dp"
+                android:text="4km" />
+
+            <RadioButton
+                android:id="@+id/radio_button_fall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:checked="@{viewModel.selectedSearchDistance.equals(5)}"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                android:onClick="@{()->viewModel.onChangeSearchDistance(5)}"
+                android:paddingHorizontal="2dp"
+                android:text="5km" />
+
+        </RadioGroup>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
