--- a/Throw_fornt/app/src/main/res/layout/fragment_my_page.xml
+++ b/Throw_fornt/app/src/main/res/layout/fragment_my_page.xml
@@ -119,7 +119,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="end"
-                                android:text="1,000 P"/>
+                                android:text="@{viewModel.mileage}"/>
                         </FrameLayout>
                         <FrameLayout
                             android:layout_width="match_parent"
@@ -134,7 +134,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="end"
-                                android:text="1,000 P"/>
+                                android:text="@{viewModel.mileage}"/>
                         </FrameLayout>
                     </LinearLayout>
                 </FrameLayout>
@@ -198,7 +198,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            android:text="마일리지/상품 구매"
+                            android:text="마일리지/랭킹 조회"
                             android:textStyle="bold"
                             android:textSize="20dp"/>
                         <View
